# SogPython

./: .gitignore  LICENSE  README.md  cli.py  morton_order.py  ply_reader.py  pyproject.toml
SogPython/: __init__.py  __main__.py  kmeans.py  sog_writer.py  utils.py
